force-app/main/default/objects/Rebuy_Radar_Setting__mdt/Rebuy_Radar_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Configuração do Rebuy Radar</label>
    <pluralLabel>Configurações do Rebuy Radar</pluralLabel>
    <description>Parâmetros do motor de recompra, ajustáveis pelo admin sem deploy de código.</description>
</CustomObject>