force-app/main/default/objects/Rebuy_Radar_Setting__mdt/fields/Analysis_Window_Months__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Window_Months__c</fullName>
    <label>Janela de Análise (meses)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>