force-app/main/default/objects/Rebuy_Radar_Setting__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Ativa</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>