force-app/main/default/objects/Rebuy_Radar_Setting__mdt/fields/Min_Purchases__c.field-meta.xml
<CustomField>
    <fullName>Min_Purchases__c</fullName>
    <label>Mínimo de Compras</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>