force-app/main/default/objects/Rebuy_Radar_Setting__mdt/fields/Risk_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Risk_Multiplier__c</fullName>
    <label>Multiplicador Risco</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>